--- a/config/locales/vi.yml
+++ b/config/locales/vi.yml
@@ -246,6 +246,8 @@ vi:
       please_log_in: Hãy đăng nhập
       employee_not_found: Không tìm thấy nhân viên
       can_not_access: Không thể truy cập
+    index:
+      employees: Nhân viên
   contracts:
     index:
       home: Trang chủ
